fix label for articles on safari

--- a/src/components/ArticlePreview/ArticlePreview.module.scss
+++ b/src/components/ArticlePreview/ArticlePreview.module.scss
@@ -14,6 +14,7 @@
     .imageBox {
         margin-bottom: gutters.$gutter-medium;
         filter: drop-shadow(0px 4px 16px rgba(20, 165, 255, 0.16));
+        position: relative;
     }
 
     .image {
